[package]
name = "tcp_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
log = "0.4.20"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
simple_logger = "4.2.0"
